test_data/neg/ss/655286/Profile_data/655286.a3m
>655286
MKLLTHVCHYCSFSFFTRKFDVFGAITKKDTPVVFCPTCGNQSLSVSHIEEEIR
>sp|P08385|VG166_BPPZA Early protein GP16.6 OS=Bacillus phage PZA GN=16.6 PE=3 SV=1
MKMLTHTCFYCSFSFFTRKFDVFGAITKKDTPVVFCPACGNQSLTVSHIEEEIG
>tr|A0A073K3Q8|A0A073K3Q8_9BACI Uncharacterized protein OS=Bacillus manliponensis GN=BAMA_00210 PE=4 SV=1
-----------------IKKDLFLLIEKKHVPVVFCDTCSANDVLALLGEE---
>tr|A0A090YWU8|A0A090YWU8_BACMY Uncharacterized protein OS=Bacillus mycoides GN=DJ93_2045 PE=4 SV=1
-----------------LREDLFSLIEIRKTPVIFCDTCDANSVLLALGEE---
>tr|R8CR49|R8CR49_BACCE Uncharacterized protein OS=Bacillus cereus HuA3-9 GN=IGA_04424 PE=4 SV=1
-----------------LRNDLFSLIEVSATPVIFCDTCDANHVLLSLGEE---
>tr|R8PWB3|R8PWB3_BACCE Uncharacterized protein OS=Bacillus cereus VD136 GN=IIW_03788 PE=4 SV=1
-----------------VKDDVFSLIEKREIPVIFCDTCDTNNVLVNLGEE---
>tr|A7GUL6|A7GUL6_BACCN Uncharacterized protein OS=Bacillus cytotoxicus (strain DSM 22905 / CIP 110041 / 391-98 / NVH 391-98) GN=Bcer98_3625 PE=4 SV=1
-----------------VKNDVFSLIEKREIPVIFCDTCETNEVLLMLGEE---
>tr|A0A0M0L8A3|A0A0M0L8A3_9BACI Uncharacterized protein OS=Bacillus koreensis GN=AMD01_06885 PE=4 SV=1
-----------------LQREVFQCMETfVDVPIVFCDTCDANKIAADLGQE---
>tr|A0A0Q9UFK9|A0A0Q9UFK9_9BACI Uncharacterized protein OS=Bacillus sp. Soil531 GN=ASG98_27905 PE=4 SV=1
-----------------LQKDVFACLNKaFHIPIIFCDSCEANKIVSALGEE---
>tr|D5TNA3|D5TNA3_BACT1 Uncharacterized protein OS=Bacillus thuringiensis (strain BMB171) GN=BMB171_C4654 PE=4 SV=1
---------------------MFSLIGVCKTPVIFCDTCDANDVLLSLGEEEE-
